<resources>
    <string name="app_name">Bus Ticket Toledo\'s</string>
    <string name="imagen_splash">Imagen Splash</string>
    <string name="logo_splash">Logo Splash</string>
    <string name="salir">Salir</string>
    <string name="configuraci_n_de_la_cuenta">Configuración de la cuenta</string>
    <string name="informaci_n_de_la_app">Información de la App</string>
    <string name="texto_info">Aplicación que sirve para facilitar la compra de billetes de autobus en la Estación de autobuses de Toledo.</string>

    <string name="ok">Ok</string>
    <string name="tus_billetes_de_autobus">Tu billete de autobus</string>
    <string name="f_cil_y_sencillo">fácil y sencillo.</string>
    <string name="rutas">Rutas</string>
    <string name="horarios">Horarios</string>
    <string name="info_estaci_n">Info.\nEstación</string>
    <string name="cuenta">Cuenta</string>
    <string name="en_vivo">En Vivo</string>
    <string name="billetes">Billetes</string>
    <string name="madridpp">Madrid por pueblos</string>

    <string name="madrid">Madrid</string>
    <string name="talaverad">Talavera directo</string>
    <string name="talaverapp">Talavera por pueblos</string>
    <string name="empresa">Empresa:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="duraci_n_viaje">Duración viaje:</string>
    <string name="distancia">Distancia:</string>
    <string name="precio">Precio:</string>
    <string name="andenes">Andenes:</string>
    <string name="abrir_en_maps">Abrir en Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_toledo">Map</string>
    <string name="estaciontoledo">Estacion de autobuses de toledo</string>
    <string name="normal">Normal</string>
    <string name="h_brido">Híbrido</string>
    <string name="sat_lite">Satélite</string>
    <string name="terreno">Terreno</string>
    <string name="escribe_tu_dni">Escribe tu dni</string>
    <string name="escribe_tus_apellidos">Escribe tus apellidos</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="cambiar_imagen">Cambiar Imagen</string>
    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="mi_rcoles">X</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="s_bado">S</string>
    <string name="domingo">D</string>
    <string name="comprar">Comprar</string>
    <string name="selecciona_fecha">Selecciona fecha</string>
    <string name="puntos">...</string>
    <string name="pago_en_met_lico">Pago en metálico</string>
    <string name="selecciona_la_hora">Selecciona la hora:</string>
    <string name="compra_de_billetes">Compra de Billetes</string>
    <string name="error">Error</string>
    <string name="selecfecha">Selecciona una fecha</string>
    <string name="paygp">Pagado Google Pay</string>
    <string name="nopagado">No pagado</string>
    <string name="borrar_billetes">Borrar Billetes</string>
    <string name="guardaconfigcuenta">Guarda los datos de configuración de cuenta</string>
</resources>
